// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`postcodejs:jest Func:cityPostcodes 1`] = `
Array [
  "1000",
  "1007",
  "1009",
  "1500",
  "1502",
  "1503",
  "1504",
  "1505",
  "1506",
  "1508",
  "1512",
  "1514",
  "1516",
  "1517",
  "1518",
  "1524",
  "1529",
  "1532",
  "1538",
  "1540",
  "1546",
  "1550",
  "1551",
  "1556",
  "1560",
  "1564",
  "1570",
  "1572",
  "1576",
  "1578",
  "1582",
  "1586",
  "1590",
  "1592",
  "1594",
  "1596",
  "1598",
  "1600",
  "1604",
  "1606",
  "1608",
  "1609",
  "1610",
  "1612",
  "1614",
  "1620",
  "1622",
  "1626",
  "1628",
  "1630",
  "1632",
  "1634",
  "1644",
  "1646",
  "1648",
  "1660",
  "1664",
  "1670",
  "1672",
  "1673",
  "1674",
  "1676",
  "1680",
  "1694",
  "2400",
  "2450",
  "2500",
]
`;

exports[`postcodejs:jest Func:districtPostcodes 1`] = `
Array [
  "93690",
  "93694",
  "93700",
  "93702",
  "93704",
  "93706",
  "93708",
  "93710",
  "93712",
  "93714",
  "93716",
  "93718",
  "93720",
  "93722",
  "93724",
  "93726",
  "93728",
  "93730",
  "93732",
  "93734",
  "93736",
  "93738",
  "93740",
  "93742",
  "93744",
  "93746",
  "93748",
  "93750",
  "93752",
  "93754",
  "93756",
  "93758",
  "93760",
  "93762",
  "93764",
  "93900",
  "93902",
  "93904",
  "93906",
  "93908",
  "93910",
  "93912",
  "93914",
  "93916",
  "93990",
  "94000",
  "94007",
  "94009",
  "94200",
  "94300",
  "94500",
  "94507",
  "94509",
  "94600",
  "94650",
  "94700",
  "94707",
  "94709",
  "94750",
  "94760",
  "94800",
  "94807",
  "94809",
  "94850",
  "94900",
  "94950",
  "95000",
  "95007",
  "95008",
  "95009",
  "95300",
  "95400",
  "95407",
  "95409",
  "95500",
  "95600",
  "95700",
  "95707",
  "95709",
  "95800",
  "95900",
  "96000",
  "96007",
  "96008",
  "96009",
  "96100",
  "96107",
  "96108",
  "96109",
  "96150",
  "96200",
  "96250",
  "96300",
  "96307",
  "96309",
  "96350",
  "96400",
  "96410",
  "96500",
  "96507",
  "96508",
  "96509",
  "96600",
  "96700",
  "96707",
  "96709",
  "96800",
  "96807",
  "96809",
  "96850",
  "96900",
  "96950",
  "97000",
  "97007",
  "97008",
  "97009",
  "97010",
  "97011",
  "97012",
  "97013",
  "97014",
  "97015",
  "97100",
]
`;

exports[`postcodejs:jest Func:postcode:Number 1`] = `
Object {
  "area": Array [
    "Kampung Bukit",
  ],
  "city": "Bintangor",
  "district": "Padang Terap",
  "state": "Sarawak",
}
`;

exports[`postcodejs:jest Func:postcode:String 1`] = `
Object {
  "area": Array [
    "Kampung Bukit",
  ],
  "city": "Bintangor",
  "district": "Padang Terap",
  "state": "Sarawak",
}
`;

exports[`postcodejs:jest Func:statePostcodes - state array 1`] = `
Array [
  "15000",
  "15050",
  "15100",
  "15150",
  "15200",
  "15300",
  "15350",
  "15400",
  "15508",
  "15594",
  "15612",
  "15720",
  "16030",
  "16040",
  "16050",
  "16070",
  "16080",
  "16090",
  "16100",
  "16200",
  "16210",
  "16250",
  "16300",
  "16310",
  "16320",
  "16400",
  "16450",
  "16500",
  "16600",
  "16700",
  "16800",
  "16810",
  "17000",
  "17007",
  "17009",
  "17010",
  "17020",
  "17030",
  "17040",
  "17050",
  "17060",
  "17070",
  "17200",
  "17500",
  "17507",
  "17509",
  "17510",
  "17600",
  "17610",
  "17700",
  "18000",
  "18050",
  "18200",
  "18300",
  "18400",
  "18500",
  "93000",
  "93010",
  "93050",
  "93100",
  "93150",
  "93200",
  "93250",
  "93300",
  "93350",
  "93400",
  "93450",
  "93500",
  "93502",
  "93503",
  "93504",
  "93505",
  "93506",
  "93507",
  "93508",
  "93514",
  "93516",
  "93517",
  "93518",
  "93519",
  "93520",
  "93527",
  "93529",
  "93532",
  "93540",
  "93550",
  "93551",
  "93552",
  "93554",
  "93556",
  "93558",
  "93560",
  "93564",
  "93566",
  "93570",
  "93572",
  "93576",
  "93578",
  "93582",
  "93586",
  "93590",
  "93592",
  "93594",
  "93596",
  "93600",
  "93604",
  "93606",
  "93608",
  "93609",
  "93610",
  "93612",
  "93614",
  "93618",
  "93619",
  "93620",
  "93626",
  "93628",
  "93632",
  "93634",
  "93648",
  "93658",
  "93660",
  "93661",
  "93662",
  "93670",
  "93672",
  "93677",
  "93690",
  "93694",
  "93700",
  "93702",
  "93704",
  "93706",
  "93708",
  "93710",
  "93712",
  "93714",
  "93716",
  "93718",
  "93720",
  "93722",
  "93724",
  "93726",
  "93728",
  "93730",
  "93732",
  "93734",
  "93736",
  "93738",
  "93740",
  "93742",
  "93744",
  "93746",
  "93748",
  "93750",
  "93752",
  "93754",
  "93756",
  "93758",
  "93760",
  "93762",
  "93764",
  "93900",
  "93902",
  "93904",
  "93906",
  "93908",
  "93910",
  "93912",
  "93914",
  "93916",
  "93990",
  "94000",
  "94007",
  "94009",
  "94200",
  "94300",
  "94500",
  "94507",
  "94509",
  "94600",
  "94650",
  "94700",
  "94707",
  "94709",
  "94750",
  "94760",
  "94800",
  "94807",
  "94809",
  "94850",
  "94900",
  "94950",
  "95000",
  "95007",
  "95008",
  "95009",
  "95300",
  "95400",
  "95407",
  "95409",
  "95500",
  "95600",
  "95700",
  "95707",
  "95709",
  "95800",
  "95900",
  "96000",
  "96007",
  "96008",
  "96009",
  "96100",
  "96107",
  "96108",
  "96109",
  "96150",
  "96200",
  "96250",
  "96300",
  "96307",
  "96309",
  "96350",
  "96400",
  "96410",
  "96500",
  "96507",
  "96508",
  "96509",
  "96600",
  "96700",
  "96707",
  "96709",
  "96800",
  "96807",
  "96809",
  "96850",
  "96900",
  "96950",
  "97000",
  "97007",
  "97008",
  "97009",
  "97010",
  "97011",
  "97012",
  "97013",
  "97014",
  "97015",
  "97100",
  "97200",
  "97300",
  "98000",
  "98007",
  "98008",
  "98009",
  "98050",
  "98057",
  "98058",
  "98059",
  "98100",
  "98107",
  "98109",
  "98150",
  "98157",
  "98159",
  "98200",
  "98300",
  "98700",
  "98707",
  "98708",
  "98709",
  "98750",
  "98800",
  "98850",
  "98857",
  "98859",
]
`;

exports[`postcodejs:jest Func:statePostcodes 1`] = `
Array [
  "93000",
  "93010",
  "93050",
  "93100",
  "93150",
  "93200",
  "93250",
  "93300",
  "93350",
  "93400",
  "93450",
  "93500",
  "93502",
  "93503",
  "93504",
  "93505",
  "93506",
  "93507",
  "93508",
  "93514",
  "93516",
  "93517",
  "93518",
  "93519",
  "93520",
  "93527",
  "93529",
  "93532",
  "93540",
  "93550",
  "93551",
  "93552",
  "93554",
  "93556",
  "93558",
  "93560",
  "93564",
  "93566",
  "93570",
  "93572",
  "93576",
  "93578",
  "93582",
  "93586",
  "93590",
  "93592",
  "93594",
  "93596",
  "93600",
  "93604",
  "93606",
  "93608",
  "93609",
  "93610",
  "93612",
  "93614",
  "93618",
  "93619",
  "93620",
  "93626",
  "93628",
  "93632",
  "93634",
  "93648",
  "93658",
  "93660",
  "93661",
  "93662",
  "93670",
  "93672",
  "93677",
  "93690",
  "93694",
  "93700",
  "93702",
  "93704",
  "93706",
  "93708",
  "93710",
  "93712",
  "93714",
  "93716",
  "93718",
  "93720",
  "93722",
  "93724",
  "93726",
  "93728",
  "93730",
  "93732",
  "93734",
  "93736",
  "93738",
  "93740",
  "93742",
  "93744",
  "93746",
  "93748",
  "93750",
  "93752",
  "93754",
  "93756",
  "93758",
  "93760",
  "93762",
  "93764",
  "93900",
  "93902",
  "93904",
  "93906",
  "93908",
  "93910",
  "93912",
  "93914",
  "93916",
  "93990",
  "94000",
  "94007",
  "94009",
  "94200",
  "94300",
  "94500",
  "94507",
  "94509",
  "94600",
  "94650",
  "94700",
  "94707",
  "94709",
  "94750",
  "94760",
  "94800",
  "94807",
  "94809",
  "94850",
  "94900",
  "94950",
  "95000",
  "95007",
  "95008",
  "95009",
  "95300",
  "95400",
  "95407",
  "95409",
  "95500",
  "95600",
  "95700",
  "95707",
  "95709",
  "95800",
  "95900",
  "96000",
  "96007",
  "96008",
  "96009",
  "96100",
  "96107",
  "96108",
  "96109",
  "96150",
  "96200",
  "96250",
  "96300",
  "96307",
  "96309",
  "96350",
  "96400",
  "96410",
  "96500",
  "96507",
  "96508",
  "96509",
  "96600",
  "96700",
  "96707",
  "96709",
  "96800",
  "96807",
  "96809",
  "96850",
  "96900",
  "96950",
  "97000",
  "97007",
  "97008",
  "97009",
  "97010",
  "97011",
  "97012",
  "97013",
  "97014",
  "97015",
  "97100",
  "97200",
  "97300",
  "98000",
  "98007",
  "98008",
  "98009",
  "98050",
  "98057",
  "98058",
  "98059",
  "98100",
  "98107",
  "98109",
  "98150",
  "98157",
  "98159",
  "98200",
  "98300",
  "98700",
  "98707",
  "98708",
  "98709",
  "98750",
  "98800",
  "98850",
  "98857",
  "98859",
]
`;

exports[`postcodejs:jest Func:statePostcodes withInfo - state array 1`] = `
Array [
  Object {
    "city": "Kota Bharu",
    "district": "Kangar",
    "postcode": "15000",
    "state": "Kelantan",
  },
  Object {
    "city": "Kota Bharu",
    "district": "Kangar",
    "postcode": "15050",
    "state": "Kelantan",
  },
  Object {
    "city": "Kota Bharu",
    "district": "Kangar",
    "postcode": "15100",
    "state": "Kelantan",
  },
  Object {
    "city": "Kota Bharu",
    "district": "Kangar",
    "postcode": "15150",
    "state": "Kelantan",
  },
  Object {
    "city": "Kota Bharu",
    "district": "Kangar",
    "postcode": "15200",
    "state": "Kelantan",
  },
  Object {
    "city": "Kota Bharu",
    "district": "Kangar",
    "postcode": "15300",
    "state": "Kelantan",
  },
  Object {
    "city": "Kota Bharu",
    "district": "Kangar",
    "postcode": "15350",
    "state": "Kelantan",
  },
  Object {
    "city": "Kota Bharu",
    "district": "Kangar",
    "postcode": "15400",
    "state": "Kelantan",
  },
  Object {
    "city": "Kota Bharu",
    "district": "Kangar",
    "postcode": "15508",
    "state": "Kelantan",
  },
  Object {
    "city": "Kota Bharu",
    "district": "Kangar",
    "postcode": "15594",
    "state": "Kelantan",
  },
  Object {
    "city": "Kota Bharu",
    "district": "Kuala Perlis",
    "postcode": "15612",
    "state": "Kelantan",
  },
  Object {
    "city": "Kota Bharu",
    "district": "Kuala Perlis",
    "postcode": "15720",
    "state": "Kelantan",
  },
  Object {
    "city": "Bachok",
    "district": "Kuala Perlis",
    "postcode": "16030",
    "state": "Kelantan",
  },
  Object {
    "city": "Wakaf Bharu",
    "district": "Kuala Perlis",
    "postcode": "16040",
    "state": "Kelantan",
  },
  Object {
    "city": "Bachok",
    "district": "Kuala Perlis",
    "postcode": "16050",
    "state": "Kelantan",
  },
  Object {
    "city": "Bachok",
    "district": "Kuala Perlis",
    "postcode": "16070",
    "state": "Kelantan",
  },
  Object {
    "city": "Tumpat",
    "district": "Kuala Perlis",
    "postcode": "16080",
    "state": "Kelantan",
  },
  Object {
    "city": "Bachok",
    "district": "Kuala Perlis",
    "postcode": "16090",
    "state": "Kelantan",
  },
  Object {
    "city": "Kota Bharu",
    "district": "Kuala Perlis",
    "postcode": "16100",
    "state": "Kelantan",
  },
  Object {
    "city": "Tumpat",
    "district": "Kuala Perlis",
    "postcode": "16200",
    "state": "Kelantan",
  },
  Object {
    "city": "Tumpat",
    "district": "Kuala Perlis",
    "postcode": "16210",
    "state": "Kelantan",
  },
  Object {
    "city": "Wakaf Bharu",
    "district": "Kuala Perlis",
    "postcode": "16250",
    "state": "Kelantan",
  },
  Object {
    "city": "Bachok",
    "district": "Kuala Perlis",
    "postcode": "16300",
    "state": "Kelantan",
  },
  Object {
    "city": "Bachok",
    "district": "Kuala Perlis",
    "postcode": "16310",
    "state": "Kelantan",
  },
  Object {
    "city": "Bachok",
    "district": "Kuala Perlis",
    "postcode": "16320",
    "state": "Kelantan",
  },
  Object {
    "city": "Melor",
    "district": "Kuala Perlis",
    "postcode": "16400",
    "state": "Kelantan",
  },
  Object {
    "city": "Ketereh",
    "district": "Kuala Perlis",
    "postcode": "16450",
    "state": "Kelantan",
  },
  Object {
    "city": "Kem Desa Pahlawan",
    "district": "Kuala Perlis",
    "postcode": "16500",
    "state": "Kelantan",
  },
  Object {
    "city": "Pulai Chondong",
    "district": "Kuala Perlis",
    "postcode": "16600",
    "state": "Kelantan",
  },
  Object {
    "city": "Cherang Ruku",
    "district": "Kuala Perlis",
    "postcode": "16700",
    "state": "Kelantan",
  },
  Object {
    "city": "Pasir Puteh",
    "district": "Kuala Perlis",
    "postcode": "16800",
    "state": "Kelantan",
  },
  Object {
    "city": "Selising",
    "district": "Kuala Perlis",
    "postcode": "16810",
    "state": "Kelantan",
  },
  Object {
    "city": "Pasir Mas",
    "district": "Kuala Perlis",
    "postcode": "17000",
    "state": "Kelantan",
  },
  Object {
    "city": "Pasir Mas",
    "district": "Kuala Perlis",
    "postcode": "17007",
    "state": "Kelantan",
  },
  Object {
    "city": "Pasir Mas",
    "district": "Kuala Perlis",
    "postcode": "17009",
    "state": "Kelantan",
  },
  Object {
    "city": "Pasir Mas",
    "district": "Kuala Perlis",
    "postcode": "17010",
    "state": "Kelantan",
  },
  Object {
    "city": "Pasir Mas",
    "district": "Kuala Perlis",
    "postcode": "17020",
    "state": "Kelantan",
  },
  Object {
    "city": "Pasir Mas",
    "district": "Kuala Perlis",
    "postcode": "17030",
    "state": "Kelantan",
  },
  Object {
    "city": "Pasir Mas",
    "district": "Kuala Perlis",
    "postcode": "17040",
    "state": "Kelantan",
  },
  Object {
    "city": "Pasir Mas",
    "district": "Kuala Perlis",
    "postcode": "17050",
    "state": "Kelantan",
  },
  Object {
    "city": "Pasir Mas",
    "district": "Kuala Perlis",
    "postcode": "17060",
    "state": "Kelantan",
  },
  Object {
    "city": "Pasir Mas",
    "district": "Kuala Perlis",
    "postcode": "17070",
    "state": "Kelantan",
  },
  Object {
    "city": "Rantau Panjang",
    "district": "Kuala Perlis",
    "postcode": "17200",
    "state": "Kelantan",
  },
  Object {
    "city": "Tanah Merah",
    "district": "Kuala Perlis",
    "postcode": "17500",
    "state": "Kelantan",
  },
  Object {
    "city": "Tanah Merah",
    "district": "Kuala Perlis",
    "postcode": "17507",
    "state": "Kelantan",
  },
  Object {
    "city": "Tanah Merah",
    "district": "Kuala Perlis",
    "postcode": "17509",
    "state": "Kelantan",
  },
  Object {
    "city": "Tanah Merah",
    "district": "Kuala Perlis",
    "postcode": "17510",
    "state": "Kelantan",
  },
  Object {
    "city": "Jeli",
    "district": "Kuala Perlis",
    "postcode": "17600",
    "state": "Kelantan",
  },
  Object {
    "city": "Kuala Balah",
    "district": "Kuala Perlis",
    "postcode": "17610",
    "state": "Kelantan",
  },
  Object {
    "city": "Ayer Lanas",
    "district": "Kuala Perlis",
    "postcode": "17700",
    "state": "Kelantan",
  },
  Object {
    "city": "Kuala Krai",
    "district": "Kuala Perlis",
    "postcode": "18000",
    "state": "Kelantan",
  },
  Object {
    "city": "Kuala Krai",
    "district": "Kuala Perlis",
    "postcode": "18050",
    "state": "Kelantan",
  },
  Object {
    "city": "Dabong",
    "district": "Kuala Perlis",
    "postcode": "18200",
    "state": "Kelantan",
  },
  Object {
    "city": "Gua Musang",
    "district": "Kuala Perlis",
    "postcode": "18300",
    "state": "Kelantan",
  },
  Object {
    "city": "Temangan",
    "district": "Kuala Perlis",
    "postcode": "18400",
    "state": "Kelantan",
  },
  Object {
    "city": "Machang",
    "district": "Kuala Perlis",
    "postcode": "18500",
    "state": "Kelantan",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93000",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93010",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93050",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93100",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93150",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93200",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93250",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93300",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93350",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93400",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93450",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93500",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93502",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93503",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93504",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93505",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93506",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93507",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93508",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93514",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93516",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93517",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93518",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93519",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93520",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93527",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93529",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93532",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93540",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93550",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93551",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93552",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93554",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93556",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93558",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93560",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93564",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93566",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93570",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93572",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93576",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93578",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93582",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93586",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93590",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93592",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93594",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93596",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93600",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93604",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93606",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93608",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93609",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93610",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93612",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93614",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93618",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93619",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93620",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93626",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93628",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93632",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93634",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93648",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93658",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93660",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93661",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93662",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93670",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93672",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Pokok Sena",
    "postcode": "93677",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93690",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93694",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93700",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93702",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93704",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93706",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93708",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93710",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93712",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93714",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93716",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93718",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93720",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93722",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93724",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93726",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93728",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93730",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93732",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93734",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93736",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93738",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93740",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93742",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93744",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93746",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93748",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93750",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93752",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93754",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93756",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93758",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93760",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93762",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93764",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93900",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93902",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93904",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93906",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93908",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93910",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93912",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93914",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93916",
    "state": "Sarawak",
  },
  Object {
    "city": "Kuching",
    "district": "Padang Terap",
    "postcode": "93990",
    "state": "Sarawak",
  },
  Object {
    "city": "Bau",
    "district": "Padang Terap",
    "postcode": "94000",
    "state": "Sarawak",
  },
  Object {
    "city": "Bau",
    "district": "Padang Terap",
    "postcode": "94007",
    "state": "Sarawak",
  },
  Object {
    "city": "Bau",
    "district": "Padang Terap",
    "postcode": "94009",
    "state": "Sarawak",
  },
  Object {
    "city": "Siburan",
    "district": "Padang Terap",
    "postcode": "94200",
    "state": "Sarawak",
  },
  Object {
    "city": "Kota Samarahan",
    "district": "Padang Terap",
    "postcode": "94300",
    "state": "Sarawak",
  },
  Object {
    "city": "Lundu",
    "district": "Padang Terap",
    "postcode": "94500",
    "state": "Sarawak",
  },
  Object {
    "city": "Lundu",
    "district": "Padang Terap",
    "postcode": "94507",
    "state": "Sarawak",
  },
  Object {
    "city": "Lundu",
    "district": "Padang Terap",
    "postcode": "94509",
    "state": "Sarawak",
  },
  Object {
    "city": "Asajaya",
    "district": "Padang Terap",
    "postcode": "94600",
    "state": "Sarawak",
  },
  Object {
    "city": "Kabong",
    "district": "Padang Terap",
    "postcode": "94650",
    "state": "Sarawak",
  },
  Object {
    "city": "Serian",
    "district": "Padang Terap",
    "postcode": "94700",
    "state": "Sarawak",
  },
  Object {
    "city": "Serian",
    "district": "Padang Terap",
    "postcode": "94707",
    "state": "Sarawak",
  },
  Object {
    "city": "Serian",
    "district": "Padang Terap",
    "postcode": "94709",
    "state": "Sarawak",
  },
  Object {
    "city": "Serian",
    "district": "Padang Terap",
    "postcode": "94750",
    "state": "Sarawak",
  },
  Object {
    "city": "Serian",
    "district": "Padang Terap",
    "postcode": "94760",
    "state": "Sarawak",
  },
  Object {
    "city": "Simunjan",
    "district": "Padang Terap",
    "postcode": "94800",
    "state": "Sarawak",
  },
  Object {
    "city": "Simunjan",
    "district": "Padang Terap",
    "postcode": "94807",
    "state": "Sarawak",
  },
  Object {
    "city": "Simunjan",
    "district": "Padang Terap",
    "postcode": "94809",
    "state": "Sarawak",
  },
  Object {
    "city": "Sebuyau",
    "district": "Padang Terap",
    "postcode": "94850",
    "state": "Sarawak",
  },
  Object {
    "city": "Lingga",
    "district": "Padang Terap",
    "postcode": "94900",
    "state": "Sarawak",
  },
  Object {
    "city": "Pusa",
    "district": "Padang Terap",
    "postcode": "94950",
    "state": "Sarawak",
  },
  Object {
    "city": "Sri Aman",
    "district": "Padang Terap",
    "postcode": "95000",
    "state": "Sarawak",
  },
  Object {
    "city": "Sri Aman",
    "district": "Padang Terap",
    "postcode": "95007",
    "state": "Sarawak",
  },
  Object {
    "city": "Sri Aman",
    "district": "Padang Terap",
    "postcode": "95008",
    "state": "Sarawak",
  },
  Object {
    "city": "Sri Aman",
    "district": "Padang Terap",
    "postcode": "95009",
    "state": "Sarawak",
  },
  Object {
    "city": "Roban",
    "district": "Padang Terap",
    "postcode": "95300",
    "state": "Sarawak",
  },
  Object {
    "city": "Saratok",
    "district": "Padang Terap",
    "postcode": "95400",
    "state": "Sarawak",
  },
  Object {
    "city": "Saratok",
    "district": "Padang Terap",
    "postcode": "95407",
    "state": "Sarawak",
  },
  Object {
    "city": "Saratok",
    "district": "Padang Terap",
    "postcode": "95409",
    "state": "Sarawak",
  },
  Object {
    "city": "Debak",
    "district": "Padang Terap",
    "postcode": "95500",
    "state": "Sarawak",
  },
  Object {
    "city": "Pusa",
    "district": "Padang Terap",
    "postcode": "95600",
    "state": "Sarawak",
  },
  Object {
    "city": "Betong",
    "district": "Padang Terap",
    "postcode": "95700",
    "state": "Sarawak",
  },
  Object {
    "city": "Betong",
    "district": "Padang Terap",
    "postcode": "95707",
    "state": "Sarawak",
  },
  Object {
    "city": "Betong",
    "district": "Padang Terap",
    "postcode": "95709",
    "state": "Sarawak",
  },
  Object {
    "city": "Engkilili",
    "district": "Padang Terap",
    "postcode": "95800",
    "state": "Sarawak",
  },
  Object {
    "city": "Lubok Anto",
    "district": "Padang Terap",
    "postcode": "95900",
    "state": "Sarawak",
  },
  Object {
    "city": "Sibu",
    "district": "Padang Terap",
    "postcode": "96000",
    "state": "Sarawak",
  },
  Object {
    "city": "Sibu",
    "district": "Padang Terap",
    "postcode": "96007",
    "state": "Sarawak",
  },
  Object {
    "city": "Sibu",
    "district": "Padang Terap",
    "postcode": "96008",
    "state": "Sarawak",
  },
  Object {
    "city": "Sibu",
    "district": "Padang Terap",
    "postcode": "96009",
    "state": "Sarawak",
  },
  Object {
    "city": "Sarikei",
    "district": "Padang Terap",
    "postcode": "96100",
    "state": "Sarawak",
  },
  Object {
    "city": "Sarikei",
    "district": "Padang Terap",
    "postcode": "96107",
    "state": "Sarawak",
  },
  Object {
    "city": "Sarikei",
    "district": "Padang Terap",
    "postcode": "96108",
    "state": "Sarawak",
  },
  Object {
    "city": "Sarikei",
    "district": "Padang Terap",
    "postcode": "96109",
    "state": "Sarawak",
  },
  Object {
    "city": "Belawai",
    "district": "Padang Terap",
    "postcode": "96150",
    "state": "Sarawak",
  },
  Object {
    "city": "Daro",
    "district": "Padang Terap",
    "postcode": "96200",
    "state": "Sarawak",
  },
  Object {
    "city": "Matu",
    "district": "Padang Terap",
    "postcode": "96250",
    "state": "Sarawak",
  },
  Object {
    "city": "Dalat",
    "district": "Padang Terap",
    "postcode": "96300",
    "state": "Sarawak",
  },
  Object {
    "city": "Dalat",
    "district": "Padang Terap",
    "postcode": "96307",
    "state": "Sarawak",
  },
  Object {
    "city": "Dalat",
    "district": "Padang Terap",
    "postcode": "96309",
    "state": "Sarawak",
  },
  Object {
    "city": "BALINGIAN",
    "district": "Padang Terap",
    "postcode": "96350",
    "state": "Sarawak",
  },
  Object {
    "city": "Mukah",
    "district": "Padang Terap",
    "postcode": "96400",
    "state": "Sarawak",
  },
  Object {
    "city": "Mukah",
    "district": "Padang Terap",
    "postcode": "96410",
    "state": "Sarawak",
  },
  Object {
    "city": "Bintangor",
    "district": "Padang Terap",
    "postcode": "96500",
    "state": "Sarawak",
  },
  Object {
    "city": "Bintangor",
    "district": "Padang Terap",
    "postcode": "96507",
    "state": "Sarawak",
  },
  Object {
    "city": "Bintangor",
    "district": "Padang Terap",
    "postcode": "96508",
    "state": "Sarawak",
  },
  Object {
    "city": "Bintangor",
    "district": "Padang Terap",
    "postcode": "96509",
    "state": "Sarawak",
  },
  Object {
    "city": "Julau",
    "district": "Padang Terap",
    "postcode": "96600",
    "state": "Sarawak",
  },
  Object {
    "city": "Kanowit",
    "district": "Padang Terap",
    "postcode": "96700",
    "state": "Sarawak",
  },
  Object {
    "city": "Kanowit",
    "district": "Padang Terap",
    "postcode": "96707",
    "state": "Sarawak",
  },
  Object {
    "city": "Kanowit",
    "district": "Padang Terap",
    "postcode": "96709",
    "state": "Sarawak",
  },
  Object {
    "city": "Kapit",
    "district": "Padang Terap",
    "postcode": "96800",
    "state": "Sarawak",
  },
  Object {
    "city": "Kapit",
    "district": "Padang Terap",
    "postcode": "96807",
    "state": "Sarawak",
  },
  Object {
    "city": "Kapit",
    "district": "Padang Terap",
    "postcode": "96809",
    "state": "Sarawak",
  },
  Object {
    "city": "Song",
    "district": "Padang Terap",
    "postcode": "96850",
    "state": "Sarawak",
  },
  Object {
    "city": "Belaga",
    "district": "Padang Terap",
    "postcode": "96900",
    "state": "Sarawak",
  },
  Object {
    "city": "Belaga",
    "district": "Padang Terap",
    "postcode": "96950",
    "state": "Sarawak",
  },
  Object {
    "city": "Bintulu",
    "district": "Padang Terap",
    "postcode": "97000",
    "state": "Sarawak",
  },
  Object {
    "city": "Bintulu",
    "district": "Padang Terap",
    "postcode": "97007",
    "state": "Sarawak",
  },
  Object {
    "city": "Bintulu",
    "district": "Padang Terap",
    "postcode": "97008",
    "state": "Sarawak",
  },
  Object {
    "city": "Bintulu",
    "district": "Padang Terap",
    "postcode": "97009",
    "state": "Sarawak",
  },
  Object {
    "city": "Bintulu",
    "district": "Padang Terap",
    "postcode": "97010",
    "state": "Sarawak",
  },
  Object {
    "city": "Bintulu",
    "district": "Padang Terap",
    "postcode": "97011",
    "state": "Sarawak",
  },
  Object {
    "city": "Bintulu",
    "district": "Padang Terap",
    "postcode": "97012",
    "state": "Sarawak",
  },
  Object {
    "city": "Bintulu",
    "district": "Padang Terap",
    "postcode": "97013",
    "state": "Sarawak",
  },
  Object {
    "city": "Bintulu",
    "district": "Padang Terap",
    "postcode": "97014",
    "state": "Sarawak",
  },
  Object {
    "city": "Bintulu",
    "district": "Padang Terap",
    "postcode": "97015",
    "state": "Sarawak",
  },
  Object {
    "city": "Sebauh",
    "district": "Padang Terap",
    "postcode": "97100",
    "state": "Sarawak",
  },
  Object {
    "city": "Tatau",
    "district": "Kota Setar",
    "postcode": "97200",
    "state": "Sarawak",
  },
  Object {
    "city": "Bintulu",
    "district": "Kota Setar",
    "postcode": "97300",
    "state": "Sarawak",
  },
  Object {
    "city": "Miri",
    "district": "Kota Setar",
    "postcode": "98000",
    "state": "Sarawak",
  },
  Object {
    "city": "Miri",
    "district": "Kota Setar",
    "postcode": "98007",
    "state": "Sarawak",
  },
  Object {
    "city": "Miri",
    "district": "Kota Setar",
    "postcode": "98008",
    "state": "Sarawak",
  },
  Object {
    "city": "Miri",
    "district": "Kota Setar",
    "postcode": "98009",
    "state": "Sarawak",
  },
  Object {
    "city": "Baram",
    "district": "Kota Setar",
    "postcode": "98050",
    "state": "Sarawak",
  },
  Object {
    "city": "Baram",
    "district": "Kota Setar",
    "postcode": "98057",
    "state": "Sarawak",
  },
  Object {
    "city": "Baram",
    "district": "Kota Setar",
    "postcode": "98058",
    "state": "Sarawak",
  },
  Object {
    "city": "Baram",
    "district": "Kota Setar",
    "postcode": "98059",
    "state": "Sarawak",
  },
  Object {
    "city": "LUTONG",
    "district": "Kota Setar",
    "postcode": "98100",
    "state": "Sarawak",
  },
  Object {
    "city": "LUTONG",
    "district": "Kota Setar",
    "postcode": "98107",
    "state": "Sarawak",
  },
  Object {
    "city": "LUTONG",
    "district": "Kota Setar",
    "postcode": "98109",
    "state": "Sarawak",
  },
  Object {
    "city": "Bekenu",
    "district": "Kota Setar",
    "postcode": "98150",
    "state": "Sarawak",
  },
  Object {
    "city": "Bekenu",
    "district": "Kota Setar",
    "postcode": "98157",
    "state": "Sarawak",
  },
  Object {
    "city": "Bekenu",
    "district": "Kota Setar",
    "postcode": "98159",
    "state": "Sarawak",
  },
  Object {
    "city": "Niah",
    "district": "Kota Setar",
    "postcode": "98200",
    "state": "Sarawak",
  },
  Object {
    "city": "Long Lama",
    "district": "Kota Setar",
    "postcode": "98300",
    "state": "Sarawak",
  },
  Object {
    "city": "Limbang",
    "district": "Kota Setar",
    "postcode": "98700",
    "state": "Sarawak",
  },
  Object {
    "city": "Limbang",
    "district": "Kota Setar",
    "postcode": "98707",
    "state": "Sarawak",
  },
  Object {
    "city": "Limbang",
    "district": "Kota Setar",
    "postcode": "98708",
    "state": "Sarawak",
  },
  Object {
    "city": "Limbang",
    "district": "Kota Setar",
    "postcode": "98709",
    "state": "Sarawak",
  },
  Object {
    "city": "Nanga Medamit",
    "district": "Kota Setar",
    "postcode": "98750",
    "state": "Sarawak",
  },
  Object {
    "city": "SUNDAR",
    "district": "Kota Setar",
    "postcode": "98800",
    "state": "Sarawak",
  },
  Object {
    "city": "Lawas",
    "district": "Kota Setar",
    "postcode": "98850",
    "state": "Sarawak",
  },
  Object {
    "city": "Lawas",
    "district": "Kota Setar",
    "postcode": "98857",
    "state": "Sarawak",
  },
  Object {
    "city": "Lawas",
    "district": "Kota Setar",
    "postcode": "98859",
    "state": "Sarawak",
  },
]
`;

exports[`postcodejs:jest Func:statePostcodes withInfo 1`] = `
Array [
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40000",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40100",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40150",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40160",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40170",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40200",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40300",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40400",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40450",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40460",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40470",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40500",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40502",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40503",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40505",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40512",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40517",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40520",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40529",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40542",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40548",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40550",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40551",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40560",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40564",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40570",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40572",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40576",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40578",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40582",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40590",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40592",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40594",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40596",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40598",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40604",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40607",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40608",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40610",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40612",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40620",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40622",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40626",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40632",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40646",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40648",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40660",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40664",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40670",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40672",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40673",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40674",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40675",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40676",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40680",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40690",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40700",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40702",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40704",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40706",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40708",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40710",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40712",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40714",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40716",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40718",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40720",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40722",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40724",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40726",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40728",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40730",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40732",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40800",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40802",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40804",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40806",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40808",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40810",
    "state": "Selangor",
  },
  Object {
    "city": "Shah Alam",
    "district": "Kota Setar",
    "postcode": "40990",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41000",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41050",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41100",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41150",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41200",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41250",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41300",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41400",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41506",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41560",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41586",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41672",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41700",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41710",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41720",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41900",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41902",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41904",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41906",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41908",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41910",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41912",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41914",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41916",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41918",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "41990",
    "state": "Selangor",
  },
  Object {
    "city": "Pelabuhan Klang",
    "district": "Kota Setar",
    "postcode": "42000",
    "state": "Selangor",
  },
  Object {
    "city": "Pelabuhan Klang",
    "district": "Kota Setar",
    "postcode": "42009",
    "state": "Selangor",
  },
  Object {
    "city": "Klang",
    "district": "Kota Setar",
    "postcode": "42100",
    "state": "Selangor",
  },
  Object {
    "city": "Kapar",
    "district": "Kota Setar",
    "postcode": "42200",
    "state": "Selangor",
  },
  Object {
    "city": "Bandar Puncak Alam",
    "district": "Kota Setar",
    "postcode": "42300",
    "state": "Selangor",
  },
  Object {
    "city": "Telok Panglima Garang",
    "district": "Kota Setar",
    "postcode": "42425",
    "state": "Selangor",
  },
  Object {
    "city": "Telok Panglima Garang",
    "district": "Kota Setar",
    "postcode": "42500",
    "state": "Selangor",
  },
  Object {
    "city": "Telok Panglima Garang",
    "district": "Kota Setar",
    "postcode": "42507",
    "state": "Selangor",
  },
  Object {
    "city": "Telok Panglima Garang",
    "district": "Kota Setar",
    "postcode": "42509",
    "state": "Selangor",
  },
  Object {
    "city": "Jenjarom",
    "district": "Kota Setar",
    "postcode": "42600",
    "state": "Selangor",
  },
  Object {
    "city": "Jenjarom",
    "district": "Kota Setar",
    "postcode": "42610",
    "state": "Selangor",
  },
  Object {
    "city": "Banting",
    "district": "Kota Setar",
    "postcode": "42700",
    "state": "Selangor",
  },
  Object {
    "city": "Tanjong Sepat",
    "district": "Kota Setar",
    "postcode": "42800",
    "state": "Selangor",
  },
  Object {
    "city": "Pulau Indah",
    "district": "Kota Setar",
    "postcode": "42920",
    "state": "Selangor",
  },
  Object {
    "city": "Pulau Ketam",
    "district": "Kota Setar",
    "postcode": "42940",
    "state": "Selangor",
  },
  Object {
    "city": "Pulau Carey",
    "district": "Kota Setar",
    "postcode": "42960",
    "state": "Selangor",
  },
  Object {
    "city": "Kajang",
    "district": "Kota Setar",
    "postcode": "43000",
    "state": "Selangor",
  },
  Object {
    "city": "Kajang",
    "district": "Kota Setar",
    "postcode": "43007",
    "state": "Selangor",
  },
  Object {
    "city": "Kajang",
    "district": "Kota Setar",
    "postcode": "43009",
    "state": "Selangor",
  },
  Object {
    "city": "Hulu Langat",
    "district": "Kota Setar",
    "postcode": "43100",
    "state": "Selangor",
  },
  Object {
    "city": "Cheras",
    "district": "Kota Setar",
    "postcode": "43200",
    "state": "Selangor",
  },
  Object {
    "city": "Cheras",
    "district": "Kota Setar",
    "postcode": "43207",
    "state": "Selangor",
  },
  Object {
    "city": "Seri Kembangan",
    "district": "Kota Setar",
    "postcode": "43300",
    "state": "Selangor",
  },
  Object {
    "city": "Serdang",
    "district": "Kota Setar",
    "postcode": "43400",
    "state": "Selangor",
  },
  Object {
    "city": "Semenyih",
    "district": "Kota Setar",
    "postcode": "43500",
    "state": "Selangor",
  },
  Object {
    "city": "Kajang",
    "district": "Kota Setar",
    "postcode": "43558",
    "state": "Selangor",
  },
  Object {
    "city": "Bandar Baru Bangi",
    "district": "Kota Setar",
    "postcode": "43600",
    "state": "Selangor",
  },
  Object {
    "city": "Bandar Baru Bangi",
    "district": "Kota Setar",
    "postcode": "43650",
    "state": "Selangor",
  },
  Object {
    "city": "Beranang",
    "district": "Kota Setar",
    "postcode": "43700",
    "state": "Selangor",
  },
  Object {
    "city": "Dengkil",
    "district": "Kota Setar",
    "postcode": "43800",
    "state": "Selangor",
  },
  Object {
    "city": "Dengkil",
    "district": "Kota Setar",
    "postcode": "43807",
    "state": "Selangor",
  },
  Object {
    "city": "Sepang",
    "district": "Kota Setar",
    "postcode": "43900",
    "state": "Selangor",
  },
  Object {
    "city": "Sungai Pelek",
    "district": "Kota Setar",
    "postcode": "43950",
    "state": "Selangor",
  },
  Object {
    "city": "Kuala Kubu Baru",
    "district": "Kota Setar",
    "postcode": "44000",
    "state": "Selangor",
  },
  Object {
    "city": "Kuala Kubu Baru",
    "district": "Kota Setar",
    "postcode": "44010",
    "state": "Selangor",
  },
  Object {
    "city": "Kuala Kubu Baru",
    "district": "Kota Setar",
    "postcode": "44020",
    "state": "Selangor",
  },
  Object {
    "city": "Kerling",
    "district": "Kota Setar",
    "postcode": "44100",
    "state": "Selangor",
  },
  Object {
    "city": "Kuala Kubu Baru",
    "district": "Kota Setar",
    "postcode": "44110",
    "state": "Selangor",
  },
  Object {
    "city": "Rasa",
    "district": "Kota Setar",
    "postcode": "44200",
    "state": "Selangor",
  },
  Object {
    "city": "Batang Kali",
    "district": "Kota Setar",
    "postcode": "44300",
    "state": "Selangor",
  },
  Object {
    "city": "Kuala Selangor",
    "district": "Kota Setar",
    "postcode": "45000",
    "state": "Selangor",
  },
  Object {
    "city": "Sungai Ayer Tawar",
    "district": "Kota Setar",
    "postcode": "45100",
    "state": "Selangor",
  },
  Object {
    "city": "Sabak Bernam",
    "district": "Kota Setar",
    "postcode": "45200",
    "state": "Selangor",
  },
  Object {
    "city": "Sabak Bernam",
    "district": "Kota Setar",
    "postcode": "45207",
    "state": "Selangor",
  },
  Object {
    "city": "Sabak Bernam",
    "district": "Kota Setar",
    "postcode": "45209",
    "state": "Selangor",
  },
  Object {
    "city": "Sungai Besar",
    "district": "Kota Setar",
    "postcode": "45300",
    "state": "Selangor",
  },
  Object {
    "city": "Sekinchan",
    "district": "Kota Setar",
    "postcode": "45400",
    "state": "Selangor",
  },
  Object {
    "city": "Tanjong Karang",
    "district": "Kota Setar",
    "postcode": "45500",
    "state": "Selangor",
  },
  Object {
    "city": "Bestari Jaya",
    "district": "Kota Setar",
    "postcode": "45600",
    "state": "Selangor",
  },
  Object {
    "city": "Bestari Jaya",
    "district": "Kota Setar",
    "postcode": "45607",
    "state": "Selangor",
  },
  Object {
    "city": "Bestari Jaya",
    "district": "Kota Setar",
    "postcode": "45609",
    "state": "Selangor",
  },
  Object {
    "city": "Bestari Jaya",
    "district": "Kota Setar",
    "postcode": "45620",
    "state": "Selangor",
  },
  Object {
    "city": "Bukit Rotan",
    "district": "Kota Setar",
    "postcode": "45700",
    "state": "Selangor",
  },
  Object {
    "city": "Jeram",
    "district": "Kota Setar",
    "postcode": "45800",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46000",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46050",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46100",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46150",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46200",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46300",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46350",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46400",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46506",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46547",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46549",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46551",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46564",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46582",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46598",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46662",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46667",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46668",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46672",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46675",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46700",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46710",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46720",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46730",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46740",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46750",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46760",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46770",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46780",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46781",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46782",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46783",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46784",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46785",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46786",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46787",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46788",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46789",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46790",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46791",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46792",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46793",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46794",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46795",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46796",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46797",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46798",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46799",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46800",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46801",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46802",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46803",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46804",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46805",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46806",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46860",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46870",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46960",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46962",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46964",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46966",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46968",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46970",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46972",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46974",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46976",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "46978",
    "state": "Selangor",
  },
  Object {
    "city": "Sungai Buloh",
    "district": "Kota Setar",
    "postcode": "47000",
    "state": "Selangor",
  },
  Object {
    "city": "Puchong",
    "district": "Kota Setar",
    "postcode": "47100",
    "state": "Selangor",
  },
  Object {
    "city": "Puchong",
    "district": "Kota Setar",
    "postcode": "47110",
    "state": "Selangor",
  },
  Object {
    "city": "Puchong",
    "district": "Kota Setar",
    "postcode": "47120",
    "state": "Selangor",
  },
  Object {
    "city": "Puchong",
    "district": "Kota Setar",
    "postcode": "47130",
    "state": "Selangor",
  },
  Object {
    "city": "Puchong",
    "district": "Kota Setar",
    "postcode": "47140",
    "state": "Selangor",
  },
  Object {
    "city": "Puchong",
    "district": "Kota Setar",
    "postcode": "47150",
    "state": "Selangor",
  },
  Object {
    "city": "Puchong",
    "district": "Kota Setar",
    "postcode": "47160",
    "state": "Selangor",
  },
  Object {
    "city": "Puchong",
    "district": "Kota Setar",
    "postcode": "47170",
    "state": "Selangor",
  },
  Object {
    "city": "Puchong",
    "district": "Kota Setar",
    "postcode": "47180",
    "state": "Selangor",
  },
  Object {
    "city": "Puchong",
    "district": "Kota Setar",
    "postcode": "47190",
    "state": "Selangor",
  },
  Object {
    "city": "Subang Jaya",
    "district": "Kota Setar",
    "postcode": "47200",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "47300",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "47301",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "47307",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "47308",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "47400",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "47410",
    "state": "Selangor",
  },
  Object {
    "city": "Subang Jaya",
    "district": "Kota Setar",
    "postcode": "47500",
    "state": "Selangor",
  },
  Object {
    "city": "Subang Jaya",
    "district": "Kota Setar",
    "postcode": "47507",
    "state": "Selangor",
  },
  Object {
    "city": "Subang Jaya",
    "district": "Kota Setar",
    "postcode": "47600",
    "state": "Selangor",
  },
  Object {
    "city": "Subang Jaya",
    "district": "Kota Setar",
    "postcode": "47610",
    "state": "Selangor",
  },
  Object {
    "city": "Subang Jaya",
    "district": "Kota Setar",
    "postcode": "47620",
    "state": "Selangor",
  },
  Object {
    "city": "Subang Jaya",
    "district": "Kota Setar",
    "postcode": "47630",
    "state": "Selangor",
  },
  Object {
    "city": "Subang Jaya",
    "district": "Kota Setar",
    "postcode": "47640",
    "state": "Selangor",
  },
  Object {
    "city": "Subang Jaya",
    "district": "Kota Setar",
    "postcode": "47650",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "47800",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "47810",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "47820",
    "state": "Selangor",
  },
  Object {
    "city": "Petaling Jaya",
    "district": "Kota Setar",
    "postcode": "47830",
    "state": "Selangor",
  },
  Object {
    "city": "Rawang",
    "district": "Kota Setar",
    "postcode": "48000",
    "state": "Selangor",
  },
  Object {
    "city": "Rawang",
    "district": "Kota Setar",
    "postcode": "48010",
    "state": "Selangor",
  },
  Object {
    "city": "Rawang",
    "district": "Kota Setar",
    "postcode": "48020",
    "state": "Selangor",
  },
  Object {
    "city": "Kuang",
    "district": "Kota Setar",
    "postcode": "48050",
    "state": "Selangor",
  },
  Object {
    "city": "Batu Arang",
    "district": "Kota Setar",
    "postcode": "48100",
    "state": "Selangor",
  },
  Object {
    "city": "Serendah",
    "district": "Kota Setar",
    "postcode": "48200",
    "state": "Selangor",
  },
  Object {
    "city": "Rawang",
    "district": "Kota Setar",
    "postcode": "48300",
    "state": "Selangor",
  },
  Object {
    "city": "Cyberjaya",
    "district": "Kubang Pasu",
    "postcode": "63000",
    "state": "Selangor",
  },
  Object {
    "city": "Cyberjaya",
    "district": "Kubang Pasu",
    "postcode": "63100",
    "state": "Selangor",
  },
  Object {
    "city": "Cyberjaya",
    "district": "Kubang Pasu",
    "postcode": "63200",
    "state": "Selangor",
  },
  Object {
    "city": "Cyberjaya",
    "district": "Kubang Pasu",
    "postcode": "63300",
    "state": "Selangor",
  },
  Object {
    "city": "KLIA",
    "district": "Kubang Pasu",
    "postcode": "64000",
    "state": "Selangor",
  },
  Object {
    "city": "Ampang",
    "district": "Kubang Pasu",
    "postcode": "68000",
    "state": "Selangor",
  },
  Object {
    "city": "Batu Caves",
    "district": "Kubang Pasu",
    "postcode": "68100",
    "state": "Selangor",
  },
]
`;
